--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="5.0">
   <display-name>Archetype Created Web Application</display-name>
-
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
@@ -17,21 +16,23 @@
     <servlet-name>enseignant</servlet-name>
     <jsp-file>/pageEnseign1.jsp</jsp-file>
   </servlet>
-   <servlet>
+  <servlet>
     <servlet-name>scolarite</servlet-name>
     <jsp-file>/pageScolar1.jsp</jsp-file>
   </servlet>
-   <servlet>
-   <description></description>
-   <display-name>CtrlEnseign1</display-name>
-   	<servlet-name>CtrlEnseign1</servlet-name>
-   	<servlet-class>ajax.ctrl.CtrlEnseign1</servlet-class>
-   </servlet>
-  
-  
+  <servlet>
+    <description></description>
+    <display-name>CtrlEnseign1</display-name>
+    <servlet-name>CtrlEnseign1</servlet-name>
+    <servlet-class>ajax.ctrl.CtrlEnseign1</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>index</servlet-name>
     <url-pattern>/Accueil</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>etudiant</servlet-name>
+    <url-pattern>/Etudiant</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>enseignant</servlet-name>
@@ -42,12 +43,17 @@
     <url-pattern>/Scolarite</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-  	<servlet-name>CtrlEnseign1</servlet-name>
-  	<url-pattern>/CtrlEnseign1</url-pattern>
+    <servlet-name>CtrlEnseign1</servlet-name>
+    <url-pattern>/CtrlEnseign1</url-pattern>
   </servlet-mapping>
-  
-  
-  
-
+  <servlet>
+    <description></description>
+    <display-name>CtrlPageConnexion</display-name>
+    <servlet-name>CtrlPageConnexion</servlet-name>
+    <servlet-class>ajax.ctrl.CtrlPageConnexion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CtrlPageConnexion</servlet-name>
+    <url-pattern>/CtrlPageConnexion</url-pattern>
+  </servlet-mapping>
 </web-app>
-
